<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/dp_15"
    app:strokeColor="@color/gray_text"
    app:strokeWidth="@dimen/dp_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15">

        <ImageView
            android:id="@+id/deleteIcon"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@drawable/delete_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextMediumStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toStartOf="@+id/deleteIcon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tvBody"
            style="@style/TextRegularStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:ellipsize="end"
            android:maxLines="5"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="@string/body" />

        <ImageView
            android:id="@+id/tagIcon"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_20"
            android:src="@drawable/tag_icon"
            app:layout_constraintEnd_toStartOf="@+id/recyclerViewChips"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBody" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewChips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_5"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/tagIcon"
            app:layout_constraintEnd_toStartOf="@+id/tvDate"
            app:layout_constraintStart_toEndOf="@+id/tagIcon"
            app:layout_constraintTop_toTopOf="@+id/tagIcon"
            tools:itemCount="1"
            tools:listitem="@layout/note_tag_item" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/TextMediumStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/dec_01_2025"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerViewChips"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recyclerViewChips"
            app:layout_constraintTop_toTopOf="@+id/recyclerViewChips" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>